--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -1,5 +1,8 @@
 name: ci-golang-workflow
-on: [push]
+on: 
+  pull_request:
+    branches:
+      - develop
 jobs: 
   check-application:
     runs-on: ubuntu-latest
@@ -7,6 +10,6 @@ jobs:
       - uses: actions/checkout@v2
       - uses: actions/setup-go@v2
         with:
-          go-version: 1.14
+          go-version: 1.15
       - run: go test
       - run: go run math.go
